Project1Vanquish/force-app/main/default/objects/Certification_Held__c/Certification_Held__c.object-meta.xml
<CustomObject>
    <label>Certification Held</label>
    <nameField>
        <label>Certification Held Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications Held</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>