Project1Vanquish/force-app/main/default/objects/Certification_Held__c/fields/Certification_Held__c.field-meta.xml
<CustomField>
    <fullName>Certification_Held__c</fullName>
    <label>Certification Held</label>
    <referenceTo>Certification__c</referenceTo>
    <relationshipLabel>Certifications Held</relationshipLabel>
    <relationshipName>Certifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>