Project1Vanquish/force-app/main/default/objects/Certification_Held__c/fields/Certification_Holder__c.field-meta.xml
<CustomField>
    <fullName>Certification_Holder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification Holder</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Certifications Held</relationshipLabel>
    <relationshipName>Certifications_Held</relationshipName>
    <type>Lookup</type>
</CustomField>